# gcaudiosync

./: .gitignore  FileConvertion.md  README.md  main.py  plots.ipynb  pyproject.toml  readinfile.py
cncparameter/: parameter.txt
gaudiosync/: io.py
gcaudiosync/: __main__.py  cli.py  core.py  helper.py  io.py  plot_spectrogram_with_slope.py  sound.py
gcaudiosync/audioanalyser/: constants.py  io.py  mask.py  optimize.py  piecewise.py  setting.py  signalprocessing.py  slicer.py  util.py  visualize.py
gcaudiosync/gcanalyser/: alternativetoolpathgenerator.py  arcinformation.py  cncparameter.py  cncparameter_old.py  cncstatus.py  coolingmanager.py  filefunctions.py  frequencyinformation.py  frequencymanager.py  gcanalyser.py  gcanalyser_old.py  gclextractor.py  gclinterpreter.py  gcodeline.py  linearaxes.py  lineextractor.py  movement.py  movementmanager.py  numericalmethods.py  pausemanager.py  rotationaxes.py  snapshotinformation.py  snapshotmanager.py  stringfunctions.py  syncinfomanager.py  toolchangemanager.py  toolpathgenerator.py  toolpathinformation.py  vectorfunctions.py
gcode/: Getriebegehaeuse.tap  Kreise mit verschF Drehzahl.cnc  Kreise mit verschF.cnc  PRUEFWERKSTUECK.MPF  Sandbox.txt  Spindelhochlauf.cnc  Testfall_1.cnc  Testfall_1.txt  Testfall_2.cnc  Testfall_2.txt  Testfall_3.cnc  Testfall_3.txt  Testfall_4.cnc  Testfall_4.txt  Testfall_5.cnc  Testfall_5.txt  Testfall_6.cnc  Testfall_6.txt  fraesen.cnc  rechtecke.cnc
generated_tones/: gen.py  tone1.py  tone2.py
readinfiles/: parameter.txt  snapshot_g_code.txt
scripts/: Beispiel_Klasse_Rechteck.py  Beispiel_Prozedurale_Programmierung.py  Beispiel_mit_Rechteck.py  entrypoint_audioanalyser.py  plot_spectogram.py  plot_spectogram_with_slope.py  sandbox_Timo.py  test_gcanalyser.py  test_gcanalyser_arc_feed.py  test_gcanalyser_linear_feed.py  test_gcanalyser_longer_Program.py  test_gcanalyser_snapshot_1.py  test_gcanalyser_snapshot_2.py
src/gcanalyser/: gcanalyser.py
tests/: test_gcanalyser.py  test_sound.py
