[tool.poetry]
authors = ["Daniel Mueller <acct.d-mueller@mailbox.org>"]
description = "Synchronise G-codes with an audio file that was recorded during the execution of the G-codes."
license = "MIT"
name = "gcaudiosync"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
numpy = "^1.26.2"
pydantic = "^2.5.0"
python = "^3.11"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
ipympl = "^0.9.3"
pandas = "^2.1.4"
black = {extras = ["jupyter"], version = "^23.12.1"}
ruptures = "^1.1.9"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
mypy = "^1.7.0"
pytest = "^7.4.3"
ruff = "^0.1.5"
pytest-cov = "^4.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
