[tool.poetry]
authors = ["Daniel Mueller <acct.d-mueller@mailbox.org>"]
description = "Synchronise G-codes with an audio file that was recorded during the execution of the G-codes."
license = "MIT"
name = "gcaudiosync"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
librosa = "^0"
matplotlib = "^3"
numpy = "^1"
pandas = "^2"
pydantic = "^2"
python = "^3.11"
scipy = "^1"

[tool.poetry.group.dev.dependencies]
bump2version = "^1"
mypy = "^1"
pytest = "^7"
pytest-cov = "^4"
ruff = "^0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
