[tool.poetry]
authors = ["Daniel Mueller <acct.d-mueller@mailbox.org>"]
description = "Synchronise G-codes with an audio file that was recorded during the execution of the G-codes."
license = "MIT"
name = "gcaudiosync"
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
gcaudiosync-cli = 'gcaudiosync.cli:cli'

[tool.poetry.dependencies]
librosa = "^0"
matplotlib = "^3.9"
numpy = "^1.26"
pandas = "^2.1"
python = "^3.11"
scipy = "^1.14"
tqdm = "^4.66.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
bump2version = "^1"
mypy = "^1"
pytest-cov = "^4"
ruff = "^0"
types-tqdm = "^4"
pandas-stubs = "^2.2.2.240807"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
